--- a/css/Bigsandov.css
+++ b/css/Bigsandov.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&family=Cairo:wght@200;500;600;900&family=Jomhuria&family=Kumbh+Sans:wght@200;400;700;800&family=Lobster&family=Outfit:wght@200;500;700&family=Overpass:ital,wght@0,200;0,400;0,600;0,800;1,100&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap");
 header {
   width: 100%;
-  height: 7.5rem;
+  height: 3.5rem;
   background-color: #FFFFFF;
   position: relative;
-  top: 0.3125rem;
+  top: -2.3125rem;
 }
 header .container {
   display: -webkit-box;
@@ -45,7 +45,7 @@ header .container .nav a {
 @media (max-width: 750px) {
   header {
     width: 100%;
-    height: 5rem;
+    height: 4rem;
   }
   header .container {
     display: -webkit-box;
@@ -62,8 +62,8 @@ header .container .nav a {
   }
   header .container .logo {
     position: relative;
-    top: -15.9rem;
-    left: -14px;
+    top: 1.4rem;
+    left: -16px;
   }
   header .container .logo img {
     width: 100px;
@@ -95,35 +95,8 @@ header .container .nav a {
     display: block;
     text-align: center;
     position: relative;
-    top: -260px;
-    right: -367px;
-  }
-  header .container .list .cancel {
-    display: none;
-  }
-}
-@media (max-width: 385px) {
-  header {
-    width: 100%;
-    height: 4rem;
-  }
-  header .container .logo {
-    top: -1.9rem;
-    left: -14px;
-  }
-  header .container .logo img {
-    width: 100px;
-  }
-  header .container .nav {
-    width: 18.3rem;
-    height: 45vh;
-    top: -26px;
-    left: 62px;
-    opacity: 0;
-  }
-  header .container .list {
-    top: -35px;
-    right: -34px;
+    top: 16px;
+    left: 106px;
   }
   header .container .list .cancel {
     display: none;
@@ -135,7 +108,7 @@ header .container .nav a {
     height: 4rem;
   }
   header .container .logo {
-    top: -1.9rem;
+    top: 1.1rem;
     left: -14px;
   }
   header .container .logo img {
@@ -149,8 +122,8 @@ header .container .nav a {
     opacity: 0;
   }
   header .container .list {
-    top: -35px;
-    right: -34px;
+    top: 10px;
+    left: 54px;
   }
   header .container .list .cancel {
     display: none;
@@ -204,6 +177,10 @@ a:hover {
   cursor: pointer;
 }
 
+i:hover {
+  cursor: pointer;
+}
+
 main {
   height: 100vh;
   background-color: #DEF0D8;
@@ -233,16 +210,21 @@ main .container .bg-image {
   background-color: #387546;
   border-radius: 50%;
   position: relative;
-  right: -28.875rem;
-  top: -5rem;
+  right: -18.875rem;
+  top: -4rem;
 }
-main .container .bg-image img {
+main .container .bg-image #image-1 {
   position: absolute;
-  left: -10rem;
-  top: 7rem;
+  left: -14rem;
+  top: -4rem;
+  z-index: 9999;
+  width: 500px;
 }
 main .container .text {
-  width: 30%;
+  width: 40%;
+  position: relative;
+  top: -3rem;
+  left: 5rem;
 }
 main .container .text h1 {
   font-size: 2.875rem;
@@ -273,28 +255,30 @@ main .container .text button {
           align-items: center;
   gap: 1rem;
 }
-
-@media (max-width: 1600px) {
-  main .container .bg-image img {
-    position: absolute;
-    left: -20rem;
-    top: 7rem;
-  }
+main .container .text button:hover {
+  cursor: pointer;
 }
+
 @media (max-width: 1200px) {
-  main .container .bg-image {
-    right: -20.875rem;
+  main .container .text {
+    top: -4rem;
+    left: 7rem;
   }
-  main .container .bg-image img {
+  main .container .text h1 {
+    font-size: 2rem;
+  }
+  main .container .bg-image {
+    right: -14.875rem;
+  }
+  main .container .bg-image #image-1 {
     position: absolute;
-    left: -24rem;
-    top: 7rem;
+    left: -13rem;
+    top: -1rem;
   }
 }
 @media (max-width: 900px) {
   main .container {
     position: relative;
-    background-color: #387546;
     border-radius: 50%;
     width: 882px;
     top: -151px;
@@ -302,18 +286,22 @@ main .container .text button {
     background-image: none;
   }
   main .container .bg-image {
-    right: -15.875rem;
+    right: -31.875rem;
     width: 65rem;
     height: 88%;
+    top: 12px;
+    background-color: transparent;
   }
-  main .container .bg-image img {
+  main .container .bg-image #image-1 {
     position: absolute;
-    left: 10rem;
-    top: 7rem;
+    left: -7rem;
+    top: -3rem;
   }
   main .container .text {
     position: absolute;
     z-index: 999;
+    top: 13rem;
+    left: 5rem;
   }
 }
 @media (max-width: 575px) {
@@ -322,23 +310,25 @@ main .container .text button {
     background-color: #387546;
     border-radius: 50%;
     width: 700px;
-    top: -157px;
-    left: -39px;
+    top: -146px;
+    left: -96px;
     background-image: none;
   }
-  main .container .bg-image img {
-    position: absolute;
-    left: -3rem;
-    top: 6rem;
+  main .container .bg-image {
+    right: -24.875rem;
+  }
+  main .container .bg-image #image-1 {
+    left: -12rem;
   }
   main .container .text {
     position: absolute;
     z-index: 999;
     left: 103px;
     bottom: 323px;
+    width: 30%;
   }
   main .container .text h1 {
-    font-size: 2rem;
+    font-size: 1.4rem;
   }
   main .container .text p {
     font-size: 1.2rem;
@@ -349,24 +339,12 @@ main .container .text button {
     height: 2.5rem;
   }
 }
-@media (max-width: 380px) {
-  main .container .bg-image img {
-    left: -6rem;
-  }
-  main .container .text {
-    left: 67px;
-    bottom: 156px;
-  }
-  main .container .text h1 {
-    font-size: 1.8rem;
-  }
-}
 .about {
   height: 100vh;
   width: 100%;
   background-color: #DEF0D8;
   position: relative;
-  top: -1.25rem;
+  top: -1rem;
 }
 .about .container {
   display: -webkit-box;
@@ -389,24 +367,27 @@ main .container .text button {
   background-color: #387546;
   border-radius: 50%;
   position: relative;
-  left: -28.875rem;
-  top: -5rem;
+  left: -20.875rem;
+  top: -4rem;
 }
-.about .container .bg-image img {
+.about .container .bg-image #image-2 {
   position: absolute;
-  right: -18rem;
-  top: 7rem;
+  right: -12rem;
+  top: 1rem;
+  width: 500px;
 }
 .about .container .text {
-  width: 30%;
+  width: 40%;
+  position: relative;
+  top: -3rem;
 }
 .about .container .text h3 {
-  font-size: 1.7rem;
-  margin-bottom: 2rem;
+  font-size: 1.5rem;
+  margin-bottom: 1.7rem;
   font-weight: bold;
 }
 .about .container .text h1 {
-  font-size: 2.875rem;
+  font-size: 2rem;
   font-weight: 800;
   word-spacing: 2px;
   margin-bottom: 2rem;
@@ -435,29 +416,16 @@ main .container .text button {
   gap: 1rem;
 }
 
-@media (max-width: 1600px) {
-  .about .container .bg-image img {
-    position: absolute;
-    right: -27rem;
-    top: 7rem;
-  }
-}
 @media (max-width: 1200px) {
-  .about .container .bg-image {
-    background-color: none;
-  }
-  .about .container .bg-image img {
-    position: absolute;
-    right: -30rem;
-  }
   .about .container .text {
     width: 50%;
   }
 }
 @media (max-width: 575px) {
-  .about .container .bg-image img {
-    position: absolute;
-    right: -33rem;
+  .about .container .bg-image {
+    left: -10.875rem;
+    top: -1rem;
+    background-color: transparent;
   }
   .about .container .text {
     z-index: 999;
@@ -529,16 +497,21 @@ main .container .text button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 87%;
+  width: 100%;
 }
 .menu .container .products .product {
   border: 0.0625rem solid transparent;
   -webkit-box-shadow: 0.5rem 0.5rem 0.375rem 0.0625rem rgba(124, 124, 124, 0.845);
           box-shadow: 0.5rem 0.5rem 0.375rem 0.0625rem rgba(124, 124, 124, 0.845);
+  width: 30%;
+  margin-right: 20px;
+}
+.menu .container .products .product img {
+  width: 100%;
 }
 .menu .container .products .product .menu-text {
   padding: 1.5rem 1rem;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   background-color: #FFFFFF;
 }
 .menu .container .products .product .menu-text div {
@@ -572,7 +545,7 @@ main .container .text button {
           flex-direction: column;
   width: 100%;
   position: relative;
-  bottom: -12.5rem;
+  bottom: -5rem;
 }
 .menu .container .galery-text h1 {
   font-size: 2.875rem;
@@ -586,9 +559,9 @@ main .container .text button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -596,16 +569,29 @@ main .container .text button {
       flex-wrap: wrap;
 }
 .menu .container .galery-images img {
-  padding: 2rem;
+  width: 300px;
+  padding-bottom: 0.5rem;
 }
 
 @media (max-width: 575px) {
   .menu {
     min-height: 300vh;
   }
+  .menu .container .text h3, .menu .container .text h1 {
+    font-size: 1.5rem;
+  }
+  .menu .container .text p {
+    font-size: 1rem;
+  }
   .menu .container .products {
-    display: block;
-    width: 70%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 192%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .menu .container .products .product {
     margin-bottom: 3rem;
@@ -649,6 +635,9 @@ main .container .text button {
 }
 .contact .container .social {
   margin-top: 4.9rem;
+  margin-right: 2.7rem;
+  position: relative;
+  left: 25px;
   background-color: #eee;
   width: 25rem;
   height: 10.625rem;
@@ -666,13 +655,13 @@ main .container .text button {
       -ms-flex-direction: column;
           flex-direction: column;
   border-radius: 3.125rem;
-  font-size: 1.2rem;
+  font-size: 1rem;
   -webkit-box-shadow: 0px 1rem 1.25rem rgba(0, 0, 0, 0.1607843137);
           box-shadow: 0px 1rem 1.25rem rgba(0, 0, 0, 0.1607843137);
 }
 .contact .container .social i {
   color: #387546;
-  font-size: 2.8125rem;
+  font-size: 2rem;
 }
 
 @media (max-width: 575px) {
@@ -683,7 +672,9 @@ main .container .text button {
     display: block;
   }
   .contact .container .social {
-    width: 20rem;
+    width: 17rem;
+    left: 23px;
+    margin-top: 2.9rem;
   }
 }
 footer {
@@ -709,7 +700,7 @@ footer .bg {
   background-color: #387546;
   border-radius: 50%;
   position: absolute;
-  top: 14.375rem;
+  top: 7.375rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -726,12 +717,12 @@ footer .bg .container .footer-logo {
   background-color: #DEF0D8;
   padding: 2.1rem;
   border-radius: 50%;
-  left: 2.1875rem;
+  left: -2.1875rem;
 }
 footer .bg .container .links {
   position: absolute;
-  top: 7.5625rem;
-  left: -4.25rem;
+  top: 6.5625rem;
+  left: -5.25rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -742,16 +733,16 @@ footer .bg .container .links {
       -ms-flex-align: center;
           align-items: center;
   width: 150%;
-  font-size: 2rem;
 }
 footer .bg .container .links a {
   color: #FFFFFF;
-  font-size: 2rem;
+  font-size: 1.8rem;
+  margin-right: 30px;
 }
 footer .bg .container .accounts {
   position: absolute;
-  top: 13.1875rem;
-  left: -0.3125rem;
+  top: 10.1875rem;
+  left: -1.3125rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
