--- a/css/sass/_about.scss
+++ b/css/sass/_about.scss
@@ -6,7 +6,7 @@
     width: 100%;
     background-color: $light-gary-one;
     position: relative;
-    top: -1.25rem;
+    top: -1rem;
     .container{
         display: flex;
         justify-content: space-between;
@@ -14,7 +14,6 @@
         height: 100%;
         overflow: hidden;
         .bg-image{
-            // background-image: $vegetable-table;
             background-repeat: no-repeat;
             background-position: center;
             width: 50%;
@@ -22,23 +21,26 @@
             background-color: #387546;
             border-radius: 50%;
             position: relative;
-            left: -28.875rem;
-            top: -5rem;
-            img{
+            left: -20.875rem;
+            top: -4rem;
+            #image-2{
                 position: absolute;
-                right: -18rem;
-                top: 7rem;
+                right: -12rem;
+                top: 1rem;
+                width: 500px;
             }
         }
         .text{
-            width: 30%;
+            width: 40%;
+            position: relative;
+            top: -3rem;
             h3{
-                font-size: 1.7rem;
-                margin-bottom: 2rem;
+                font-size: 1.5rem;
+                margin-bottom: 1.7rem;
                 font-weight: bold;
             }
             h1{
-                font-size: 2.875rem;
+                font-size: 2rem;
                 font-weight: 800;
                 word-spacing: 2px;
                 margin-bottom: 2rem;
@@ -65,30 +67,10 @@
 }
 
 
-@media(max-width:1600px){
-    .about{
-        .container{
-            .bg-image{
-               
-                img{
-                    position: absolute;
-                    right: -27rem;
-                    top: 7rem;
-                }
-            }
-        }
-    }
-}
+
 @media(max-width:1200px){
     .about{
         .container{
-            .bg-image{
-                background-color: none;
-                img{
-                    position: absolute;
-                    right: -30rem;
-                }
-            }
             .text{
                 width: 50%;
             }
@@ -100,10 +82,10 @@
     .about{
         .container{
             .bg-image{
-                img{
-                    position: absolute;
-                    right: -33rem;
-                }
+                left: -10.875rem;
+                top: -1rem;
+                background-color: transparent;
+                
             }
             .text{
                 z-index: 999;
