--- a/css/sass/_menu.scss
+++ b/css/sass/_menu.scss
@@ -36,13 +36,18 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            width: 87%;
+            width: 100%;
             .product{
                 border: 0.0625rem solid transparent;
                 box-shadow: 0.5rem 0.5rem 0.375rem 0.0625rem rgba(124, 124, 124, 0.845);
+                width: 30%;
+                margin-right: 20px;
+                img{
+                    width: 100%;
+                }
                 .menu-text{
                     padding: 1.5rem 1rem;
-                    font-size: 1.5rem;
+                    font-size: 1.2rem;
                     background-color: $white-one;
 
                     div{
@@ -64,7 +69,7 @@
             flex-direction: column;
             width: 100%;
             position: relative;
-            bottom: -12.5rem;
+            bottom: -5rem;
             &-text{
                 h1{
                     font-size: 2.875rem;
@@ -77,14 +82,16 @@
             &-images{
                 
                 width: 100%;
+                
                 display: flex;
-                justify-content: space-between;
+                justify-content: space-evenly;
                 align-items: center;
                 flex-wrap: wrap;
 
                 img{
-                    padding: 2rem;
-                    // width: 30%;
+                    // padding: 1rem;
+                    width: 300px;
+                    padding-bottom: 0.5rem;
 
                 }
             }
@@ -95,12 +102,19 @@
 @media(max-width:575px){
     .menu{
         min-height: 300vh;
-        // overflow: hidden;
         .container{
+            .text{
+                h3 , h1{
+                    font-size: 1.5rem;
+                }
+                p{
+                    font-size: 1rem;
+                }
+            }
             .products{
-                display: block;
-                width: 70%;
-                // min-height: 300vh;
+                display: flex;
+                width: 192%;
+                flex-direction: column;
                 .product{
                     margin-bottom: 3rem;
                     img{
